Pharmacy is done

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -365,7 +365,7 @@
   </div>
 
   <!-- Modals will be added dynamically via JavaScript -->
-  <div id="modal-overlay" class="modal-overlay" onclick="closeModal()"></div>
+  <div id="modal-overlay" class="modal-overlay"></div>
 </body>
 </html>
 
