--- a/public/register.html
+++ b/public/register.html
@@ -19,7 +19,7 @@
       <div id="message" class="message"></div>
 
       <!-- Register Form -->
-      <form onsubmit="handleRegister(event)" id="registerForm">
+      <form id="registerForm">
         <div class="form-section">
     
           
