--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
       <div id="message" class="message"></div>
 
       <!-- Login Form -->
-      <form onsubmit="handleLogin(event)" id="loginForm">
+      <form id="loginForm">
         <div class="input-group">
           <label>Email Address <span class="required">*</span></label>
           <input type="email" name="email" required placeholder="Enter your email">
