done Doctor Dashboard

--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
           <label>Password <span class="required">*</span></label>
           <div class="input-wrapper">
             <input type="password" id="login-password" name="password" required placeholder="Enter your password">
-            <span class="password-toggle" onclick="togglePassword('login-password')">👁️</span>
+            <span class="password-toggle" data-password-id="login-password" style="cursor: pointer;">👁️</span>
           </div>
         </div>
 
