--- a/public/register.html
+++ b/public/register.html
@@ -102,7 +102,7 @@
             <label>Password <span class="required">*</span></label>
             <div class="input-wrapper">
               <input type="password" id="register-password" name="password" required minlength="6" placeholder="At least 6 characters">
-              <span class="password-toggle" onclick="togglePassword('register-password')">👁️</span>
+              <span class="password-toggle" data-password-id="register-password" style="cursor: pointer;">👁️</span>
             </div>
             <small class="help-text">Must be at least 6 characters</small>
           </div>
@@ -111,7 +111,7 @@
             <label>Confirm Password <span class="required">*</span></label>
             <div class="input-wrapper">
               <input type="password" id="confirm-password" name="confirm_password" required placeholder="Re-enter password">
-              <span class="password-toggle" onclick="togglePassword('confirm-password')">👁️</span>
+              <span class="password-toggle" data-password-id="confirm-password" style="cursor: pointer;">👁️</span>
             </div>
           </div>
         </div>
