update front  translation

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HealthPal - Dashboard</title>
   <link rel="stylesheet" href="dashboard.css">
+  <script defer src="translations.js"></script>
   <script defer src="dashboard.js"></script>
 </head>
 <body>
@@ -166,6 +167,9 @@
         </div>
         <div class="top-bar-right">
           <div class="user-info">
+            <button id="language-toggle" class="btn-language" title="Toggle Language">
+              <span id="language-icon">🌐</span>
+            </button>
             <span id="user-name">User</span>
             <span id="user-role" class="user-role-badge"></span>
           </div>
